--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@mui/icons-material": "^5.15.1",
     "@mui/material": "^5.15.1",
     "@mui/styled-engine-sc": "^6.0.0-alpha.9",
+    "@react-oauth/google": "^0.12.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -16,14 +17,18 @@
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
     "antd": "^5.12.4",
+    "axios": "^1.6.2",
     "crypto-js": "^4.2.0",
+    "jwt-decoder-claims": "^1.2.1",
     "react": "^18.2.0",
     "react-auth-kit": "^2.8.3",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.6",
     "react-hook-form": "^7.49.2",
     "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.2",
+    "sweetalert2": "^11.10.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
