--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.68",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
     "antd": "^5.12.4",
@@ -23,20 +22,23 @@
     "react": "^18.2.0",
     "react-auth-kit": "^2.8.3",
     "react-dom": "^18.2.0",
+    "react-dotenv": "^0.1.3",
     "react-draggable": "^4.4.6",
     "react-hook-form": "^7.49.2",
     "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1",
+    "serve": "^14.2.1",
     "styled-components": "^6.1.2",
     "sweetalert2": "^11.10.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-dotenv && react-scripts start",
+    "build": "react-dotenv && react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "serve": "react-dotenv && serve build"
   },
   "eslintConfig": {
     "extends": [
@@ -54,6 +56,13 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
+    ]
+  },
+  "react-dotenv": {
+    "whitelist": [
+      "API_URL",
+      "BASE_URL",
+      "GOOGLE_CLIENT_ID"
     ]
   }
 }
